documentation + vectorization + attempt to add BLAS3 performance into HouseholderQR; TODO: increase precision and have all stress tests pass